<resources>
    <string name="app_name">Project</string>

    //activity_login.xml
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>

    //activity_register.xml
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_name">Username</string>
    <string name="btn_register">REGISTER</string>

    //activity_main.xml
    <string name="welcome">Welcome</string>
    <string name="btn_logout">Logout</string>

    //nav_drawer
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="category">Category</string>
</resources>
