<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColorHint="@color/white">
        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/user"
            android:drawablePadding="10dp"
            android:hint="@string/register_name"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColorHint="@color/white">
        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:drawableEnd="@drawable/lock"
            android:drawablePadding="10dp"
            android:hint="@string/register_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColorHint="@color/white">
        <EditText
            android:id="@+id/category"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/white"
            android:drawablePadding="10dp"
            android:hint="@string/category"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:elevation="2dp"
            android:background="@drawable/edgebutton"
            android:text="@string/btn_register"
            android:textColor="@color/white" />

</LinearLayout>