<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/username"
            android:layout_width="fill_parent"
            android:layout_height="43dp"
            android:background="@drawable/topedgerect"
            android:hint="@string/login_username"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/greytext"
            android:textColorHint="@color/input_login_hint"
            android:gravity="center"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="43dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/botedgerect"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/greytext"
            android:textColorHint="@color/input_login_hint"
            android:gravity="center"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edgerect"
            android:layout_marginTop="5dp"
            android:text="@string/btn_login"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>